feat(dashboard): enrich latest decisions from base read models
load latest decisions from decision result base queries

batch enrich dashboard decisions with analysis runs and latest execution plans

add latest plan tie-break query for dashboard read models

cover summary, detail and fallback read-model behavior

keep dashboard controller, schema and plan boundary changes out of this commit